<?xml version="1.0" encoding="utf-8"?><!--
    Opurex Android com.opurex.ortus.client
    Copyright (C) Opurex contributors, see the COPYRIGHT file

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<EditTextPreference
		android:defaultValue="my.opurex.org/7"
		android:key="host"
		android:singleLine="true"
		android:summary="@string/config_host_desc"
		android:title="@string/config_host_title" />

	<EditTextPreference
		android:defaultValue=""
		android:key="user"
		android:singleLine="true"
		android:summary="@string/config_user_desc"
		android:title="@string/config_user_title" />

	<EditTextPreference
		android:defaultValue=""
		android:key="password"
		android:singleLine="true"
		android:inputType="textPassword"
		android:summary="@string/config_password_desc"
		android:title="@string/config_password_title" />

	<EditTextPreference
		android:defaultValue="@string/default_cash"
		android:key="machine_name"
		android:singleLine="true"
		android:summary="@string/config_machine_name_desc"
		android:title="@string/config_machine_name_title" />

	<ListPreference
		android:defaultValue="0"
		android:entries="@array/config_tickets_modes"
		android:entryValues="@array/config_tickets_mode_values"
		android:key="tickets_mode"
		android:summary="@string/config_tickets_mode_desc"
		android:title="@string/config_tickets_mode_title" />

	<PreferenceScreen android:title="@string/config_printers">

		<PreferenceScreen android:title="@string/config_main_printer">
			<ListPreference
				android:defaultValue="None"
				android:entries="@array/config_printer_drivers"
				android:entryValues="@array/config_printer_drivers_values"
				android:key="printer_driver"
				android:title="@string/config_printer_driver" />

			<ListPreference
				android:key="printer_model"
				android:title="@string/config_printer_model" />

			<EditTextPreference
				android:defaultValue=""
				android:key="printer_address"
				android:singleLine="true"
				android:summary="@string/config_printer_address_desc"
				android:title="@string/config_printer_address_title" />

			<Preference
				android:key="select_bluetooth_printer"
				android:title="Select Bluetooth Printer"
				android:summary="Scan and select a Bluetooth printer from paired devices">
			</Preference>

			<CheckBoxPreference
				android:defaultValue="true"
				android:key="printer_print_ticket_by_default"
				android:summary="@string/config_printer_print_ticket_by_default_desc"
				android:title="@string/config_printer_print_ticket_by_default_title" />

			<PreferenceScreen
				android:title="@string/pos_device_feature_name"
				android:summary="@string/pos_device_feature_description">
				<intent android:action="opurex.action.PosDeviceFeatures"/>
			</PreferenceScreen>

			<Preference
				android:key="oocom_printer_help"
				android:title="OOCom Printer Setup Help"
				android:summary="Instructions for configuring OOCom Bluetooth printer">
				<intent android:action="com.opurex.ortus.client.OOCOM_PRINTER_HELP"/>
			</Preference>
		</PreferenceScreen>

		<PreferenceScreen android:title="@string/config_aux_printer_1">
			<ListPreference
				android:defaultValue="None"
				android:entries="@array/config_aux_printer_drivers"
				android:entryValues="@array/config_aux_printer_drivers_values"
				android:key="printer_driver1"
				android:title="@string/config_printer_driver" />

			<ListPreference
				android:key="printer_model1"
				android:title="@string/config_printer_model" />

			<EditTextPreference
				android:defaultValue=""
				android:key="printer_address1"
				android:singleLine="true"
				android:summary="@string/config_printer_address_desc"
				android:title="@string/config_printer_address_title" />

			<Preference
				android:key="select_bluetooth_printer1"
				android:title="Select Bluetooth Printer"
				android:summary="Scan and select a Bluetooth printer from paired devices">
			</Preference>
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/config_aux_printer_2">
			<ListPreference
				android:defaultValue="None"
				android:entries="@array/config_aux_printer_drivers"
				android:entryValues="@array/config_aux_printer_drivers_values"
				android:key="printer_driver2"
				android:title="@string/config_printer_driver" />

			<ListPreference
				android:key="printer_model2"
				android:title="@string/config_printer_model" />

			<EditTextPreference
				android:defaultValue=""
				android:key="printer_address2"
				android:singleLine="true"
				android:summary="@string/config_printer_address_desc"
				android:title="@string/config_printer_address_title" />

			<Preference
				android:key="select_bluetooth_printer2"
				android:title="Select Bluetooth Printer"
				android:summary="Scan and select a Bluetooth printer from paired devices">
			</Preference>
		</PreferenceScreen>
		<EditTextPreference
			android:defaultValue="3"
			android:key="printer_connect_try"
			android:singleLine="true"
			android:summary="@string/config_printer_connect_try_desc"
			android:title="@string/config_printer_connect_try_title" />
	</PreferenceScreen>

	<PreferenceScreen
		android:title="@string/config_card_processor_title">

		<ListPreference
			android:defaultValue="none"
			android:entries="@array/config_available_processors"
			android:entryValues="@array/config_available_processors_values"
			android:key="card_processor"
			android:title="@string/config_card_processor" />

		<EditTextPreference
			android:key="worldline_address"
			android:singleLine="true"
			android:summary="@string/config_worldline_address_desc"
			android:title="@string/config_worldline_address_title"
			android:defaultValue="" />

		<EditTextPreference
			android:key="xengo_userid"
			android:singleLine="true"
			android:summary="@string/config_xengo_userid_desc"
			android:title="@string/config_xengo_userid_title"
			android:defaultValue="" />
		<EditTextPreference
			android:key="xengo_password"
			android:summary="@string/config_xengo_password_desc"
			android:singleLine="true"
			android:title="@string/config_xengo_password_title"
			android:defaultValue="" />
		<EditTextPreference
			android:key="xengo_terminalid"
			android:summary="@string/config_xengo_terminalid_desc"
			android:singleLine="true"
			android:title="@string/config_xengo_terminalid_title"
			android:defaultValue="" />
	</PreferenceScreen>

	<CheckBoxPreference
		android:defaultValue="true"
		android:key="ssl"
		android:summary="@string/config_ssl_desc"
		android:title="@string/config_ssl_title" />

	<CheckBoxPreference
		android:defaultValue="true"
		android:key="discount"
		android:summary="@string/config_discount_desc"
		android:title="@string/config_discount_title" />

	<PreferenceScreen
		android:title="M-Pesa Configuration">
		<EditTextPreference
			android:key="mpesa_business_shortcode"
			android:singleLine="true"
			android:title="Business Short Code"
			android:summary="Your 6-digit M-Pesa business short code"
			android:defaultValue="" />

		<EditTextPreference
			android:key="mpesa_passkey"
			android:singleLine="true"
			android:title="Passkey"
			android:summary="Your M-Pesa passkey from Safaricom Developer Portal"
			android:defaultValue="" />

		<EditTextPreference
			android:key="mpesa_callback_url"
			android:singleLine="true"
			android:title="Callback URL"
			android:summary="URL for payment confirmation callbacks"
			android:defaultValue="" />

		<EditTextPreference
			android:key="mpesa_test_phone"
			android:singleLine="true"
			android:title="Test Phone Number"
			android:summary="Phone number for testing (format: 07XXXXXXXX)"
			android:defaultValue="" />
	</PreferenceScreen>

	<PreferenceScreen
		android:title="@string/config_advanced">

		<CheckBoxPreference
			android:defaultValue="false"
			android:key="mail_enabled"
			android:title="@string/config_mail_enabled_title"
			android:summary="@string/config_mail_enabled_desc" />

	</PreferenceScreen>

	<PreferenceScreen
		android:title="Scale Configuration">

		<CheckBoxPreference
			android:defaultValue="true"
			android:key="enable_manual_weight_entry"
			android:title="Enable Manual Weight Entry"
			android:summary="Allow manual entry of weight when scale is not connected" />

		<CheckBoxPreference
			android:defaultValue="false"
			android:key="enable_virtual_scale"
			android:title="Enable Virtual Scale"
			android:summary="Allow using virtual scale for testing (default: disabled)" />

		<Preference
			android:key="select_bluetooth_scale"
			android:title="Select Bluetooth Scale"
			android:summary="Scan and select a Bluetooth scale from paired devices">
		</Preference>

		<EditTextPreference
			android:defaultValue=""
			android:key="scale_address"
			android:singleLine="true"
			android:summary="MAC address of the selected Bluetooth scale"
			android:title="Scale MAC Address" />

	</PreferenceScreen>


</PreferenceScreen>

