<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <group android:checkableBehavior="single">-->
<!--&lt;!&ndash;        <item&ndash;&gt;-->
<!--&lt;!&ndash;            android:id="@+id/ab_menu_scale_connect"&ndash;&gt;-->
<!--&lt;!&ndash;            android:icon="@drawable/ic_scale_connect"&ndash;&gt;-->
<!--&lt;!&ndash;            android:title="@string/connect_scale" />&ndash;&gt;-->

<!--        <item-->
<!--            android:id="@+id/ab_menu_cashdrawer"-->
<!--            android:icon="@drawable/ic_money"-->
<!--            android:title="@string/menu_open_cashdrawer" />-->
<!--    </group>-->

    <item android:title="Transaction Options">
        <menu>
            <item
                android:id="@+id/ab_menu_manual_input"
                android:icon="@drawable/ic_edit"
                android:title="@string/menu_manual_input" />
            <item
                android:id="@+id/ab_menu_customer_list"
                android:icon="@drawable/ic_list"
                android:title="@string/menu_assign_customer" />
            <item
                android:id="@+id/ab_menu_customer_add"
                android:icon="@drawable/ic_person_add"
                android:title="@string/menu_add_customer" />
            <item
                android:id="@+id/ab_menu_past_ticket"
                android:icon="@drawable/ic_history"
                android:title="@string/menu_edit_tickets" />
        </menu>
    </item>

    <item android:title="Session">
        <menu>
            <item
                android:id="@+id/ab_menu_calendar"
                android:icon="@drawable/ic_date_range"
                android:title="@string/open_calendar" />
            <item
                android:id="@+id/ab_menu_close_session"
                android:icon="@drawable/ic_power_settings_new"
                android:enabled="false"
                android:title="@string/menu_main_close" />
        </menu>
    </item>

</menu>